<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="60dp"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="60dp"
    android:background="@color/skin"
    tools:context="com.example.rathimunukur.todoapp.EditItemActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40dp"
        android:text="@string/my_task_label"
        android:id="@+id/tvMyTask"
        android:textStyle="bold"
        android:textColor="@color/deepPurple"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/etEditField"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="73dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30dp"
        android:hint="@string/text_prompt" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30dp"
        android:text="@string/duedate_label"
        android:id="@+id/tvDueDatePrompt"
        android:onClick="onDateClick"
        android:layout_below="@+id/etEditField"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="58dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30dp"
        android:id="@+id/tvDate"
        android:text="Date"
        android:onClick="onDateClick"
        android:layout_alignTop="@+id/tvDueDatePrompt"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp"
        android:layout_alignParentEnd="true"
        android:textIsSelectable="false"
        android:singleLine="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30dp"
        android:text="@string/priority_prompt_label"
        android:id="@+id/tvPriorityPrompt"
        android:onClick="onPriorityClick"
        android:layout_marginTop="58dp"
        android:layout_below="@+id/tvDueDatePrompt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="PriorityHere"
        android:id="@+id/tvPriority"
        android:onClick="onPriorityClick"
        android:layout_below="@+id/tvPriorityPrompt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancel"
        android:textSize="30dp"
        android:textColor="@color/deepPurple"
        android:id="@+id/btnCancel"
        android:onClick="onCancelClick"
        android:layout_marginTop="58dp"
        android:layout_below="@+id/tvPriority"
        android:layout_alignLeft="@+id/tvPriorityPrompt" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textSize="30dp"
        android:textColor="@color/deepPurple"
        android:id="@+id/btnSave"
        android:onClick="saveItem"
        android:layout_alignBottom="@+id/btnCancel"
        android:layout_toRightOf="@id/btnCancel"
        android:layout_marginLeft="20dp"/>

</RelativeLayout>
